syntax = "proto3";

package account_service;


service Account {
    rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse) {
   }
    rpc ResendActivationMail(ResendActivationMailRequest) returns (ResendActivationMailResponse) {

    }
    rpc ActivateAccount(ActivateAccountRequest) returns (ActivateAccountResponse) {

    }
    rpc UpdateAccount(UpdateAccountRequest) returns (UpdateAccountResponse) {

    }
    rpc DeleteAccount(DeleteAccountRequest) returns (DeleteAccountResponse) {

    }
    rpc GetAccount(GetAccountRequest) returns (GetAccountResponse) {

    }
    rpc Login(LoginRequest) returns (LoginResponse) {

    }
     rpc Logout(LogoutRequest) returns (LogoutResponse) {

    }
    rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse) {

    }
    rpc LockAccount(LockAccountRequest) returns (LockAccountResponse) {

    }
    rpc RequestUnlockAccount(RequestUnlockAccountRequest) returns (RequestUnlockAccountResponse) {

    }
    rpc UnlockAccount(UnlockAccountRequest) returns (UnlockAccountResponse) {

    }
    rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {

    }
}

message User {
    string first_name = 1;
    string last_name = 2;
    string birthday = 3;
    string email = 4;
    string username = 5;
    string password = 6;
    string phone_number = 7;
    string photo = 8;
    uint32 available_mb = 9;
    bool is_admin = 10;
    bool is_locked = 11;
    bool is_activated = 12;
    string last_login = 13;
    string last_edited = 14;
    string created = 15;
}

message CreateAccountRequest {
    User user = 1;
    string creation_date = 2;
}
message CreateAccountResponse {
    string user_id = 1;
}
message ActivateAccountRequest {
    string activation_token = 1;
    string activation_date = 2;
}
message ActivateAccountResponse {
    string session_token = 1;
}
message ResendActivationMailRequest {
    string email = 1;
}
message ResendActivationMailResponse {
}
message UpdateAccountRequest {
    User user = 1;
    string creation_date = 2;
}
message UpdateAccountResponse {
}
message DeleteAccountRequest{
    string session_token = 1;
}
message DeleteAccountResponse{
}
message GetAccountRequest{
    string id = 1;
}
message GetAccountResponse{
    User user = 1;
}
message LoginRequest{
    string username = 1;
    string password = 2;
}
message LoginResponse{
    string session_token = 1;
}
message LogoutRequest{
    string session_token = 1;
}
message LogoutResponse{
}
message ResetPasswordRequest{
    string session_token = 1;
    string email = 2;
    string old_password = 3;
    string new_password = 4;
}
message ResetPasswordResponse{
}
message LockAccountRequest{
    string session_token = 1;
    string user_id = 2;
}
message LockAccountResponse{
}
message UnlockAccountRequest{
    string email = 1;
    string session_token = 2;
    string user_id = 3;
}
message UnlockAccountResponse{
}
message RequestUnlockAccountRequest{
    string email = 1;
    string password = 2;
}
message RequestUnlockAccountResponse{
}
message ListUsersRequest {
    string session_token = 1;
}
message ListUsersResponse {
    repeated User users = 1;
}
